# qodex

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  package.json  pnpm-lock.yaml
.github/: CODEOWNERS  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
apps/desktop/: index.html  package.json  playwright.config.ts  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: ARCHITECTURE.md  DOCUMENT_INDEX.md  INSTALLATION.md  QUICK_START.md
docs/P0_Project_Definition/: 01_PRODUCT_REQUIREMENTS.md  Qodex_Agent_Startup_Guide.md  Qodex_Development_Roadmap_v1.md  Qodex_Investor_Pitch_v1.md  Qodex_PRD_v1.md
docs/P1_Architecture/: 02_SYSTEM_ARCHITECTURE.md  Qodex_Architecture_v1.md  Qodex_Feature_Mapping_v1.md  Qodex_MCP_Spec_v1.md  Qodex_TechStack_v1.md  Qodex_v2_Master_Architecture_Pack.md
docs/P2_Engineering_Pack/: 04_PROVIDER_SDK.md  05_SKILL_ENGINE.md  06_AGENT_RUNTIME.md  07_CONTEXT_ENGINE.md  08_DIFF_ENGINE.md  09_TOOL_RUNTIME_AND_PERMISSIONS.md  10_MCP_RUNTIME.md  12_MONOREPO_AND_SETUP.md  13_GITHUB_ISSUES_MVP.md  INDEX.md  Qodex_Agent_Runtime_v2.md  Qodex_Context_Engine_v2.md  Qodex_GitHub_Issues_MVP_v2.md  Qodex_Provider_Ecosystem_v2.md  Qodex_Provider_SDK_v1.md  Qodex_Skill_Spec_v1.md  Qodex_V4_Implementation_Spec.md  README.md
docs/P3_Source_of_Truth/: 00_INDEX.md  01_API_CONTRACT_OPENAPI_JSON_SCHEMA.md  02_SQL_SCHEMA_AND_MIGRATIONS.md  03_DATABASE_SCHEMA.sql  (+8 more)
qodex-config/: memory.md  rules.md
(+126 files in other folders)
