[package]
name = "qodex-desktop"
version = "0.1.0"
description = "Qodex Desktop Shell"
authors = ["Qodex"]
edition = "2021"

[lib]
name = "qodex_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
